--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,17 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+attrs==23.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.6.2
 charset-normalizer==3.3.2
+dataclasses-json==0.6.7
 distro==1.9.0
+faiss-cpu==1.8.0
 filelock==3.14.0
+frozenlist==1.4.1
 fsspec==2024.6.0
 h11==0.14.0
 httpcore==1.0.5
@@ -12,11 +20,17 @@ idna==3.7
 Jinja2==3.1.4
 jsonpatch==1.33
 jsonpointer==2.4
+langchain==0.2.3
+langchain-community==0.2.4
 langchain-core==0.2.5
 langchain-openai==0.1.8
+langchain-text-splitters==0.2.1
 langsmith==0.1.75
 MarkupSafe==2.1.5
+marshmallow==3.21.3
 mpmath==1.3.0
+multidict==6.0.5
+mypy-extensions==1.0.0
 networkx==3.3
 numpy==1.26.4
 openai==1.32.0
@@ -29,10 +43,14 @@ PyYAML==6.0.1
 regex==2024.5.15
 requests==2.32.3
 sniffio==1.3.1
+soupsieve==2.5
+SQLAlchemy==2.0.30
 sympy==1.12.1
 tenacity==8.3.0
 tiktoken==0.7.0
 torch==2.3.1
 tqdm==4.66.4
+typing-inspect==0.9.0
 typing_extensions==4.12.1
 urllib3==2.2.1
+yarl==1.9.4
